Manage JRuby security flags via java-args-dist
JRuby requires a few `--add-opens` and `--allow-native-access` to be
present in `JAVA_ARGS` to enable access to bundled JAR content and
native libraries.

This commit moves those flags from `cli-defaults.sh` to the new
`java-args-dist` setting added in EZbake 4.1.0.

Signed-off-by: Super User <root@claude.ark.keyhole.link>