@@ -163,6 +163,9 @@
                        :puppet-platform-version 9
                        :java-args ~(str "-Xms2g -Xmx2g "
                                      "-Djruby.logger.class=com.puppetlabs.jruby_utils.jruby.Slf4jLogger")
+                       :java-args-dist ~(str "--add-opens java.base/sun.nio.ch=ALL-UNNAMED "
+                                             "--add-opens java.base/java.io=ALL-UNNAMED "
+                                             "--enable-native-access=ALL-UNNAMED")
                        :create-dirs ["/opt/puppetlabs/server/data/puppetserver/jars"
                                      "/opt/puppetlabs/server/data/puppetserver/yaml"]
                        :repo-target "openvox9"
